--- a/sonoff-s31.yaml
+++ b/sonoff-s31.yaml
@@ -1,16 +1,19 @@
-esphome:
-  name_add_mac_suffix: true
-
-esphome:
+substitutions:
   name: sonoff-s31
   friendly_name: Sonoff S31 Smart Plug
-  name_add_mac_suffix: true
+  name_add_mac_suffix: "true"
+
+esphome:
+  name: ${name}
+  friendly_name: ${friendly_name}
+  name_add_mac_suffix: ${name_add_mac_suffix}
   project:
     name: matiasjrossi.sonoff-s31
     version: "1.0"
 
 dashboard_import:
-  package_import_url: github://matiasjrossi/esphome-devices/sonoff-s31.yaml
+  package_import_url: github://matiasjrossi/esphome-devices/sonoff-s31.yaml@1.0
+  import_full_config: true
 
 <<: !include common.yaml
 
@@ -58,7 +61,7 @@ sensor:
 
 switch:
   - platform: gpio
-    name: None
+    name: Outlet
     pin: GPIO12
     id: relay
     restore_mode: RESTORE_DEFAULT_OFF
