--- a/sonoff-s31.yaml
+++ b/sonoff-s31.yaml
@@ -2,6 +2,7 @@ substitutions:
   name: sonoff-s31
   friendly_name: Sonoff S31 Smart Plug
   name_add_mac_suffix: "true"
+  version: "1.0"
 
 esphome:
   name: ${name}
@@ -9,11 +10,10 @@ esphome:
   name_add_mac_suffix: ${name_add_mac_suffix}
   project:
     name: matiasjrossi.sonoff-s31
-    version: "1.0"
+    version: ${version}
 
 dashboard_import:
-  package_import_url: github://matiasjrossi/esphome-devices/sonoff-s31.yaml@1.0
-  import_full_config: true
+  package_import_url: github://matiasjrossi/esphome-devices/sonoff-s31.yaml@${version}
 
 <<: !include common.yaml
 
