--- a/martin-jerry-sd01.yaml
+++ b/martin-jerry-sd01.yaml
@@ -1,7 +1,12 @@
-esphome:
+substitutions:
   name: mj-sd01
   friendly_name: Martin Jerry SD01 Smart Dimmer
-  name_add_mac_suffix: true
+  name_add_mac_suffix: "true"
+
+esphome:
+  name: ${name}
+  friendly_name: ${friendly_name}
+  name_add_mac_suffix: ${name_add_mac_suffix}
   project:
     name: matiasjrossi.martin-jerry-sd01
     version: "1.0"
